--- a/Commercial Janitorial Services/404.html
+++ b/Commercial Janitorial Services/404.html
@@ -221,8 +221,9 @@
     <!-- Minimal Footer -->
     <footer class="py-8 bg-white dark:bg-dark-body border-t border-gray-100 dark:border-gray-800">
         <div class="container mx-auto px-6 text-center">
-            <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by Abhivorn
-                Technologies.</p>
+            <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by <a
+                    href="https://www.abhivorn.com/" target="_blank"
+                    class="hover:text-nova-blue transition-colors">Abhivorn Technologies</a>.</p>
         </div>
     </footer>
 
