--- a/Commercial Janitorial Services/about.html
+++ b/Commercial Janitorial Services/about.html
@@ -28,6 +28,21 @@
             }
         }
     </script>
+    <!-- FOUC Prevention - Apply theme and RTL immediately -->
+    <script>
+            (function () {
+                // Apply theme
+                const savedTheme = localStorage.getItem('theme');
+                const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+                const theme = savedTheme || (prefersDark ? 'dark' : 'light');
+                document.documentElement.classList.add(theme);
+                document.documentElement.setAttribute('data-theme', theme);
+
+                // Apply RTL direction
+                const savedDir = localStorage.getItem('dir') || 'ltr';
+                document.documentElement.setAttribute('dir', savedDir);
+            })();
+    </script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -52,21 +67,17 @@
                 <a href="contact.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Contact</a>
             </div>
             <div class="flex items-center gap-4">
-                <a href="login.html"
-                    class="hidden lg:flex px-8 py-2.5 bg-nova-blue hover:bg-blue-600 text-white rounded-xl font-bold shadow-lg shadow-blue-500/30 transition-all active:scale-95 items-center space-x-2">
+                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
                     <span>Login</span>
                 </a>
-                <button id="rtl-toggle"
-                    class="w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm font-bold text-xs">
+                <button id="rtl-toggle" class="btn-icon font-bold text-xs">
                     RTL
                 </button>
-                <button id="theme-toggle"
-                    class="w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm">
+                <button id="theme-toggle" class="btn-icon">
                     <i class="fa-solid fa-moon dark:hidden text-lg"></i>
                     <i class="fa-solid fa-sun hidden dark:block text-lg"></i>
                 </button>
-                <button id="mobile-menu-btn"
-                    class="lg:hidden w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm">
+                <button id="mobile-menu-btn" class="lg:hidden btn-icon">
                     <i class="fa-solid fa-bars text-lg"></i>
                 </button>
             </div>
@@ -95,8 +106,7 @@
                 <a href="pricing.html" class="block text-lg font-medium dark:text-gray-300">Pricing</a>
                 <a href="contact.html" class="block text-lg font-medium dark:text-gray-300">Contact</a>
                 <hr class="border-gray-100 dark:border-gray-800">
-                <a href="login.html"
-                    class="block w-full py-3 text-center bg-nova-blue text-white rounded-xl font-bold">Login</a>
+                <a href="login.html" class="btn btn-nova btn-full">Login</a>
             </div>
         </div>
     </div>
@@ -129,8 +139,8 @@
             <div class="container mx-auto px-6">
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
                     <div>
-                        <img src="https://images.unsplash.com/photo-1521791136064-7986c2923216?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                            alt="Our Cleaning Team" class="rounded-[2.5rem] shadow-2xl">
+                        <img src="assets/images/hero_cleaning.png" alt="Our Cleaning Team"
+                            class="rounded-[2.5rem] shadow-2xl">
                     </div>
                     <div>
                         <h2 class="text-3xl font-bold font-heading mb-6 dark:text-white">Our Mission & Values</h2>
@@ -316,18 +326,30 @@
                 <div>
                     <h4 class="text-lg font-bold mb-6 dark:text-white">Services</h4>
                     <ul class="space-y-4">
-                        <li><a href="services.html"
+                        <li><a href="office-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Office
                                 Cleaning</a></li>
                         <li><a href="industrial-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Industrial
                                 Cleaning</a>
                         </li>
-                        <li><a href="404.html"
+                        <li><a href="sanitization-services.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Sanitization</a>
                         </li>
-                        <li><a href="coming-soon.html"
+                        <li><a href="window-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Window
+                                Cleaning</a></li>
+                        <li><a href="carpet-cleaning.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Carpet
+                                Cleaning</a></li>
+                        <li><a href="floor-waxing.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Floor
+                                Waxing</a></li>
+                        <li><a href="post-construction.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Post-Construction</a>
+                        </li>
+                        <li><a href="green-cleaning.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Green
                                 Cleaning</a></li>
                     </ul>
                 </div>
@@ -345,8 +367,9 @@
                 </div>
             </div>
             <div class="pt-8 border-t border-gray-100 dark:border-gray-800 text-center">
-                <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by Abhivorn
-                    Technologies.</p>
+                <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by <a
+                        href="https://www.abhivorn.com/" target="_blank"
+                        class="hover:text-nova-blue transition-colors">Abhivorn Technologies</a>.</p>
             </div>
         </div>
     </footer>
