--- a/Commercial Janitorial Services/client/index.html
+++ b/Commercial Janitorial Services/client/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" data-theme="light" class="dark">
+<html lang="en" dir="ltr" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client Dashboard - NovaSite</title>
+
+    <!-- FOUC Prevention - Apply theme and RTL immediately -->
+    <script>
+        (function () {
+            // Apply theme
+            const savedTheme = localStorage.getItem('theme');
+            const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            const theme = savedTheme || (prefersDark ? 'dark' : 'light');
+            document.documentElement.classList.add(theme);
+            document.documentElement.setAttribute('data-theme', theme);
+
+            // Apply RTL direction
+            const savedDir = localStorage.getItem('dir') || 'ltr';
+            document.documentElement.setAttribute('dir', savedDir);
+        })();
+    </script>
+
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -38,7 +56,7 @@
     <div class="flex h-screen overflow-hidden">
         <!-- Sidebar -->
         <aside id="sidebar"
-            class="fixed inset-y-0 left-0 z-50 w-64 bg-white dark:bg-dark-sidebar border-r border-gray-100 dark:border-gray-800 transition-transform duration-300 transform lg:translate-x-0 -translate-x-full">
+            class="fixed inset-y-0 left-0 rtl:left-auto rtl:right-0 z-50 w-64 bg-white dark:bg-dark-sidebar border-r rtl:border-r-0 rtl:border-l border-gray-100 dark:border-gray-800 transition-transform duration-300 transform lg:translate-x-0 rtl:lg:translate-x-0 -translate-x-full rtl:translate-x-full">
             <div class="flex flex-col h-full">
                 <!-- Brand -->
                 <div class="p-6">
@@ -63,10 +81,15 @@
                         <i class="fa-solid fa-sparkles w-6"></i>
                         <span>My Services</span>
                     </a>
+                    <a href="history.html"
+                        class="flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
+                        <i class="fa-solid fa-clock-rotate-left w-6"></i>
+                        <span>History</span>
+                    </a>
                     <a href="billing.html"
                         class="flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
                         <i class="fa-solid fa-file-invoice-dollar w-6"></i>
-                        <span>Billing</span>
+                        <span>Invoices</span>
                     </a>
                     <a href="support.html"
                         class="flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
@@ -90,18 +113,18 @@
         </aside>
 
         <!-- Main Content -->
-        <main class="flex-1 flex flex-col min-w-0 lg:ml-64 transition-all duration-300">
+        <main class="flex-1 flex flex-col min-w-0 lg:ms-64 transition-all duration-300">
             <!-- Header -->
             <header
                 class="h-16 flex items-center justify-between px-6 bg-white dark:bg-dark-sidebar border-b border-gray-100 dark:border-gray-800">
                 <div class="flex items-center lg:hidden">
                     <button id="toggleSidebar" class="p-2 text-gray-500 hover:text-primary-500">
-                        <i class="fa-solid fa-bars-staggered text-xl"></i>
+                        <i class="fa-solid fa-bars-staggered text-xl rtl-flip"></i>
                     </button>
-                    <span class="ml-4 font-bold font-heading dark:text-white">NovaSite</span>
+                    <span class="ms-4 font-bold font-heading dark:text-white">NovaSite</span>
                 </div>
 
-                <div class="ml-auto flex items-center space-x-3 sm:space-x-4">
+                <div class="ms-auto flex items-center gap-5 sm:gap-8">
                     <button id="theme-toggle"
                         class="w-10 h-10 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors">
                         <i class="fa-solid fa-moon dark:hidden"></i>
@@ -172,7 +195,7 @@
 
                     <div class="h-8 w-px bg-gray-100 dark:bg-gray-800 mx-1 hidden sm:block"></div>
 
-                    <div class="flex items-center space-x-3 pl-2">
+                    <div class="flex items-center gap-3 ps-2">
                         <div class="text-right hidden sm:block">
                             <p class="text-sm font-bold dark:text-white leading-none">Robert Smith</p>
                             <p class="text-[10px] text-gray-500 leading-none mt-1">TechCorp Plaza</p>
@@ -192,11 +215,11 @@
                     <div class="relative z-10">
                         <h2 class="text-3xl font-bold font-heading mb-2">Welcome back, Robert!</h2>
                         <p class="text-primary-100">Your next cleaning service is scheduled for tomorrow at 6:00 PM.</p>
-                        <div class="mt-6 flex space-x-4">
-                            <button
+                        <div class="mt-6 flex gap-4">
+                            <button onclick="window.showToast('Booking feature coming soon!', 'info')"
                                 class="px-6 py-3 bg-white text-primary-600 font-bold rounded-xl hover:scale-105 transition-all">Book
                                 New Service</button>
-                            <button
+                            <button onclick="window.showToast('Support chat opening...', 'info')"
                                 class="px-6 py-3 bg-primary-500/30 backdrop-blur-md text-white border border-white/20 font-bold rounded-xl hover:bg-primary-500/40 transition-all">Support
                                 Chat</button>
                         </div>
@@ -249,7 +272,8 @@
                         class="bg-white dark:bg-dark-card rounded-3xl border border-gray-100 dark:border-gray-800 shadow-sm overflow-hidden">
                         <div class="p-6 border-b border-gray-50 dark:border-gray-800 flex items-center justify-between">
                             <h4 class="text-lg font-bold dark:text-white">Recent Service Logs</h4>
-                            <button class="text-sm font-bold text-primary-500">View History</button>
+                            <a href="history.html"
+                                class="text-sm font-bold text-primary-500 hover:text-primary-600">View History</a>
                         </div>
                         <div class="p-6 space-y-6">
                             <div class="flex items-center space-x-4">
@@ -282,7 +306,8 @@
                         class="bg-white dark:bg-dark-card rounded-3xl border border-gray-100 dark:border-gray-800 shadow-sm overflow-hidden">
                         <div class="p-6 border-b border-gray-50 dark:border-gray-800 flex items-center justify-between">
                             <h4 class="text-lg font-bold dark:text-white">Latest Invoices</h4>
-                            <button class="text-sm font-bold text-primary-500">All Invoices</button>
+                            <a href="billing.html" class="text-sm font-bold text-primary-500 hover:text-primary-600">All
+                                Invoices</a>
                         </div>
                         <div class="overflow-x-auto">
                             <table class="w-full text-left">
@@ -319,28 +344,6 @@
     </div>
 
     <!-- Scripts -->
-    <script>
-        // Sidebar Toggle for Mobile
-        const sidebar = document.getElementById('sidebar');
-        const toggleSidebar = document.getElementById('toggleSidebar');
-        const themeToggleBtn = document.getElementById('theme-toggle');
-
-        if (toggleSidebar) {
-            toggleSidebar.addEventListener('click', (e) => {
-                e.stopPropagation();
-                sidebar.classList.toggle('-translate-x-full');
-            });
-        }
-
-        // Close sidebar when clicking outside on mobile
-        document.addEventListener('click', (e) => {
-            if (window.innerWidth < 1024 && sidebar && !sidebar.contains(e.target) && !toggleSidebar.contains(e.target)) {
-                sidebar.classList.add('-translate-x-full');
-            }
-        });
-
-
-    </script>
     <script src="../assets/js/main.js"></script>
 </body>
 
