--- a/Commercial Janitorial Services/client/support.html
+++ b/Commercial Janitorial Services/client/support.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" data-theme="light" class="dark">
+<html lang="en" dir="ltr" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support Center - NovaSite Client</title>
+
+    <!-- FOUC Prevention - Apply theme and RTL immediately -->
+    <script>
+        (function () {
+            // Apply theme
+            const savedTheme = localStorage.getItem('theme');
+            const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            const theme = savedTheme || (prefersDark ? 'dark' : 'light');
+            document.documentElement.classList.add(theme);
+            document.documentElement.setAttribute('data-theme', theme);
+
+            // Apply RTL direction
+            const savedDir = localStorage.getItem('dir') || 'ltr';
+            document.documentElement.setAttribute('dir', savedDir);
+        })();
+    </script>
+
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -38,7 +56,7 @@
     <div class="flex h-screen overflow-hidden">
         <!-- Sidebar -->
         <aside id="sidebar"
-            class="fixed inset-y-0 left-0 z-50 w-64 bg-white dark:bg-dark-sidebar border-r border-gray-100 dark:border-gray-800 transition-transform duration-300 transform lg:translate-x-0 -translate-x-full">
+            class="fixed inset-y-0 left-0 rtl:left-auto rtl:right-0 z-50 w-64 bg-white dark:bg-dark-sidebar border-r rtl:border-r-0 rtl:border-l border-gray-100 dark:border-gray-800 transition-transform duration-300 transform lg:translate-x-0 rtl:lg:translate-x-0 -translate-x-full rtl:translate-x-full">
             <div class="flex flex-col h-full">
                 <!-- Brand -->
                 <div class="p-6">
@@ -90,18 +108,18 @@
         </aside>
 
         <!-- Main Content -->
-        <main class="flex-1 flex flex-col min-w-0 lg:ml-64 transition-all duration-300">
+        <main class="flex-1 flex flex-col min-w-0 lg:ms-64 transition-all duration-300">
             <!-- Header -->
             <header
                 class="h-16 flex items-center justify-between px-6 bg-white dark:bg-dark-sidebar border-b border-gray-100 dark:border-gray-800">
                 <div class="flex items-center lg:hidden">
                     <button id="toggleSidebar" class="p-2 text-gray-500 hover:text-primary-500">
-                        <i class="fa-solid fa-bars-staggered text-xl"></i>
+                        <i class="fa-solid fa-bars-staggered text-xl rtl-flip"></i>
                     </button>
-                    <span class="ml-4 font-bold font-heading dark:text-white">NovaSite</span>
+                    <span class="ms-4 font-bold font-heading dark:text-white">NovaSite</span>
                 </div>
 
-                <div class="ml-auto flex items-center space-x-3 sm:space-x-4">
+                <div class="ms-auto flex items-center gap-5 sm:gap-8">
                     <button id="theme-toggle"
                         class="w-10 h-10 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors">
                         <i class="fa-solid fa-moon dark:hidden"></i>
@@ -172,7 +190,7 @@
 
                     <div class="h-8 w-px bg-gray-100 dark:bg-gray-800 mx-1 hidden sm:block"></div>
 
-                    <div class="flex items-center space-x-3 pl-2">
+                    <div class="flex items-center gap-3 ps-2">
                         <div class="text-right hidden sm:block">
                             <p class="text-sm font-bold dark:text-white leading-none">Robert Smith</p>
                             <p class="text-[10px] text-gray-500 leading-none mt-1">TechCorp Plaza</p>
@@ -202,7 +220,7 @@
                             </div>
                             <h4 class="text-xl font-bold dark:text-white mb-2">Live Chat</h4>
                             <p class="text-sm text-gray-500 mb-6">Chat with our support experts in real-time.</p>
-                            <button
+                            <button onclick="startChat()"
                                 class="w-full py-4 gradient-primary text-white font-bold rounded-xl shadow-lg shadow-primary-500/30">Start
                                 Chat</button>
                         </div>
@@ -214,7 +232,7 @@
                             </div>
                             <h4 class="text-xl font-bold dark:text-white mb-2">Submit Ticket</h4>
                             <p class="text-sm text-gray-500 mb-6">Open a case for complex technical issues.</p>
-                            <button
+                            <button onclick="openTicketPrompt()"
                                 class="w-full py-4 border border-gray-200 dark:border-gray-700 dark:text-white font-bold rounded-xl hover:bg-gray-50 dark:hover:bg-gray-800 transition-all">Open
                                 Ticket</button>
                         </div>
@@ -252,6 +270,102 @@
     </div>
 
     <!-- Scripts -->
+
+    <!-- Chat & Ticket Modal -->
+    <div id="ticketModal" class="fixed inset-0 bg-black/50 z-50 hidden flex items-center justify-center p-4">
+        <div class="bg-white dark:bg-dark-card rounded-2xl w-full max-w-lg p-6 relative">
+            <button onclick="closeTicketModal()"
+                class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 dark:hover:text-gray-300">
+                <i class="fa-solid fa-xmark text-xl"></i>
+            </button>
+            <h3 class="text-xl font-bold dark:text-white mb-4">Open Support Ticket</h3>
+            <form id="ticketForm" onsubmit="submitTicket(event)">
+                <div class="mb-4">
+                    <label class="block text-sm font-semibold dark:text-gray-300 mb-2">Issue Type</label>
+                    <select id="ticketType" required
+                        class="w-full px-4 py-3 rounded-xl border border-gray-200 dark:border-gray-700 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-primary-500 focus:border-transparent">
+                        <option value="">Select issue type...</option>
+                        <option value="scheduling">Scheduling Issue</option>
+                        <option value="billing">Billing Question</option>
+                        <option value="quality">Service Quality</option>
+                        <option value="technical">Technical Problem</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="mb-4">
+                    <label class="block text-sm font-semibold dark:text-gray-300 mb-2">Subject</label>
+                    <input type="text" id="ticketSubject" required placeholder="Brief description of your issue"
+                        class="w-full px-4 py-3 rounded-xl border border-gray-200 dark:border-gray-700 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-primary-500 focus:border-transparent">
+                </div>
+                <div class="mb-4">
+                    <label class="block text-sm font-semibold dark:text-gray-300 mb-2">Description</label>
+                    <textarea id="ticketDescription" required rows="4" placeholder="Please provide more details..."
+                        class="w-full px-4 py-3 rounded-xl border border-gray-200 dark:border-gray-700 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-primary-500 focus:border-transparent resize-none"></textarea>
+                </div>
+                <div class="flex gap-3">
+                    <button type="button" onclick="closeTicketModal()"
+                        class="flex-1 py-3 border border-gray-200 dark:border-gray-700 dark:text-white rounded-xl hover:bg-gray-50 dark:hover:bg-gray-800 transition-all">Cancel</button>
+                    <button type="submit"
+                        class="flex-1 py-3 gradient-primary text-white font-bold rounded-xl shadow-lg">Submit
+                        Ticket</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        // Start Chat function with confirm dialog
+        function startChat() {
+            if (confirm('Are you sure you want to start a live chat with our support team?\n\nA support agent will be with you shortly.')) {
+                // Initialize chat session
+                console.log('Chat session started');
+                alert('Connecting to support chat...\n\nPlease wait while we connect you with an agent.');
+                // Here you can add actual chat initialization code
+            }
+        }
+
+        // Open Ticket prompt
+        function openTicketPrompt() {
+            if (confirm('Would you like to open a support ticket?\n\nClick OK to continue or Cancel to go back.')) {
+                document.getElementById('ticketModal').classList.remove('hidden');
+                document.body.style.overflow = 'hidden';
+            }
+        }
+
+        // Close ticket modal
+        function closeTicketModal() {
+            document.getElementById('ticketModal').classList.add('hidden');
+            document.body.style.overflow = '';
+        }
+
+        // Submit ticket form
+        function submitTicket(event) {
+            event.preventDefault();
+            const ticketType = document.getElementById('ticketType').value;
+            const ticketSubject = document.getElementById('ticketSubject').value;
+            const ticketDescription = document.getElementById('ticketDescription').value;
+
+            if (confirm('Are you ready to submit this ticket?\n\nType: ' + ticketType + '\nSubject: ' + ticketSubject)) {
+                alert('Your ticket has been submitted successfully!\n\nTicket ID: #' + Math.floor(Math.random() * 100000) + '\n\nWe will respond within 24 hours.');
+                closeTicketModal();
+                document.getElementById('ticketForm').reset();
+            }
+        }
+
+        // Close modal on backdrop click
+        document.getElementById('ticketModal').addEventListener('click', function (e) {
+            if (e.target === this) {
+                closeTicketModal();
+            }
+        });
+
+        // Close modal on Escape key
+        document.addEventListener('keydown', function (e) {
+            if (e.key === 'Escape') {
+                closeTicketModal();
+            }
+        });
+    </script>
     <script src="../assets/js/main.js"></script>
 </body>
 
