--- a/Commercial Janitorial Services/index.html
+++ b/Commercial Janitorial Services/index.html
@@ -37,6 +37,22 @@
         }
     </script>
 
+    <!-- FOUC Prevention - Apply theme and RTL immediately -->
+    <script>
+            (function () {
+                // Apply theme
+                const savedTheme = localStorage.getItem('theme');
+                const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+                const theme = savedTheme || (prefersDark ? 'dark' : 'light');
+                document.documentElement.classList.add(theme);
+                document.documentElement.setAttribute('data-theme', theme);
+
+                // Apply RTL direction
+                const savedDir = localStorage.getItem('dir') || 'ltr';
+                document.documentElement.setAttribute('dir', savedDir);
+            })();
+    </script>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -71,21 +87,17 @@
 
             <!-- Right Side Actions -->
             <div class="flex items-center gap-4">
-                <a href="login.html"
-                    class="hidden lg:flex px-8 py-2.5 bg-nova-blue hover:bg-blue-600 text-white rounded-xl font-bold shadow-lg shadow-blue-500/30 transition-all active:scale-95 items-center space-x-2">
+                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
                     <span>Login</span>
                 </a>
-                <button id="rtl-toggle"
-                    class="w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm font-bold text-xs">
+                <button id="rtl-toggle" class="btn-icon font-bold text-xs">
                     RTL
                 </button>
-                <button id="theme-toggle"
-                    class="w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm">
+                <button id="theme-toggle" class="btn-icon">
                     <i class="fa-solid fa-moon dark:hidden text-lg"></i>
                     <i class="fa-solid fa-sun hidden dark:block text-lg"></i>
                 </button>
-                <button id="mobile-menu-btn"
-                    class="lg:hidden w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm">
+                <button id="mobile-menu-btn" class="lg:hidden btn-icon">
                     <i class="fa-solid fa-bars text-lg"></i>
                 </button>
             </div>
@@ -114,8 +126,7 @@
                 <a href="pricing.html" class="block text-lg font-medium dark:text-gray-300">Pricing</a>
                 <a href="contact.html" class="block text-lg font-medium dark:text-gray-300">Contact</a>
                 <hr class="border-gray-100 dark:border-gray-800">
-                <a href="login.html"
-                    class="block w-full py-3 text-center bg-nova-blue text-white rounded-xl font-bold">Login</a>
+                <a href="login.html" class="btn btn-nova btn-full">Login</a>
             </div>
         </div>
     </div>
@@ -146,11 +157,9 @@
                     warehouses, and industrial facilities. Reliable, thorough, and ready for 2026.
                 </p>
                 <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
-                    <a href="services.html"
-                        class="w-full sm:w-auto px-8 py-4 gradient-primary text-white rounded-2xl font-semibold shadow-xl shadow-primary-500/40 hover:scale-105 transition-transform">Get
+                    <a href="services.html" class="btn btn-primary w-full sm:w-auto">Get
                         Started Now</a>
-                    <a href="https://vimeo.com/"
-                        class="w-full sm:w-auto px-8 py-4 bg-white dark:bg-white/10 dark:text-white border border-gray-100 dark:border-gray-800 rounded-2xl font-semibold hover:bg-gray-50 dark:hover:bg-white/20 transition-all flex items-center justify-center space-x-2">
+                    <a href="https://vimeo.com/" class="btn btn-secondary w-full sm:w-auto">
                         <i class="fa-solid fa-circle-play text-primary-500"></i>
                         <span>Watch Demo</span>
                     </a>
@@ -202,7 +211,7 @@
                     <h3 class="text-xl font-bold mb-4 dark:text-white">Office Cleaning</h3>
                     <p class="text-gray-500 dark:text-gray-400 mb-6 leading-relaxed">Daily and weekly specialized
                         cleaning for corporate spaces, ensuring a hygienic workspace for your employees.</p>
-                    <a href="service-details.html"
+                    <a href="office-cleaning.html"
                         class="flex items-center space-x-2 text-primary-600 font-semibold group-hover:space-x-3 transition-all">
                         <span>Read More</span>
                         <i class="fa-solid fa-arrow-right-long"></i>
@@ -236,7 +245,7 @@
                     <h3 class="text-xl font-bold mb-4 dark:text-white">Sanitization Services</h3>
                     <p class="text-gray-500 dark:text-gray-400 mb-6 leading-relaxed">Advanced disinfection and
                         sanitization services using hospital-grade products for maximum safety.</p>
-                    <a href="service-details.html"
+                    <a href="sanitization-services.html"
                         class="flex items-center space-x-2 text-orange-600 font-semibold group-hover:space-x-3 transition-all">
                         <span>Read More</span>
                         <i class="fa-solid fa-arrow-right-long"></i>
@@ -319,18 +328,30 @@
                 <div>
                     <h4 class="text-lg font-bold mb-6 dark:text-white">Services</h4>
                     <ul class="space-y-4">
-                        <li><a href="services.html"
+                        <li><a href="office-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Office
                                 Cleaning</a></li>
                         <li><a href="industrial-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Industrial
                                 Cleaning</a>
                         </li>
-                        <li><a href="404.html"
+                        <li><a href="sanitization-services.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Sanitization</a>
                         </li>
-                        <li><a href="coming-soon.html"
+                        <li><a href="window-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Window
+                                Cleaning</a></li>
+                        <li><a href="carpet-cleaning.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Carpet
+                                Cleaning</a></li>
+                        <li><a href="floor-waxing.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Floor
+                                Waxing</a></li>
+                        <li><a href="post-construction.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Post-Construction</a>
+                        </li>
+                        <li><a href="green-cleaning.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Green
                                 Cleaning</a></li>
                     </ul>
                 </div>
@@ -348,8 +369,9 @@
                 </div>
             </div>
             <div class="pt-8 border-t border-gray-100 dark:border-gray-800 text-center">
-                <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by Abhivorn
-                    Technologies.</p>
+                <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by <a
+                        href="https://www.abhivorn.com/" target="_blank"
+                        class="hover:text-nova-blue transition-colors">Abhivorn Technologies</a>.</p>
             </div>
         </div>
     </footer>
