--- a/Commercial Janitorial Services/industrial-cleaning.html
+++ b/Commercial Janitorial Services/industrial-cleaning.html
@@ -53,21 +53,17 @@
                 <a href="contact.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Contact</a>
             </div>
             <div class="flex items-center space-x-4">
-                <button id="theme-toggle"
-                    class="w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm">
+                <button id="theme-toggle" class="btn-icon">
                     <i class="fa-solid fa-moon dark:hidden text-lg"></i>
                     <i class="fa-solid fa-sun hidden dark:block text-lg"></i>
                 </button>
-                <button id="rtl-toggle"
-                    class="w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm font-bold text-xs">
+                <button id="rtl-toggle" class="btn-icon font-bold text-xs">
                     RTL
                 </button>
-                <button id="mobile-menu-btn"
-                    class="lg:hidden w-11 h-11 flex items-center justify-center rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white transition-all hover:bg-gray-200 dark:hover:bg-gray-700 shadow-sm">
+                <button id="mobile-menu-btn" class="lg:hidden btn-icon">
                     <i class="fa-solid fa-bars text-lg"></i>
                 </button>
-                <a href="login.html"
-                    class="hidden lg:flex px-8 py-2.5 bg-nova-blue hover:bg-blue-600 text-white rounded-xl font-bold shadow-lg shadow-blue-500/30 transition-all active:scale-95 items-center space-x-2">
+                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
                     <span>Login</span>
                 </a>
             </div>
@@ -96,8 +92,7 @@
                 <a href="pricing.html" class="block text-lg font-medium dark:text-gray-300">Pricing</a>
                 <a href="contact.html" class="block text-lg font-medium dark:text-gray-300">Contact</a>
                 <hr class="border-gray-100 dark:border-gray-800">
-                <a href="login.html"
-                    class="block w-full py-3 text-center bg-nova-blue text-white rounded-xl font-bold">Login</a>
+                <a href="login.html" class="btn btn-nova btn-full">Login</a>
             </div>
         </div>
     </div>
@@ -224,9 +219,8 @@
                                         class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-gray-800 border-none outline-none dark:text-white focus:ring-2 focus:ring-primary-500">
                                 </div>
                                 <div class="pt-4 border-t border-gray-100 dark:border-gray-800">
-                                    <a href="contact.html"
-                                        class="block w-full text-center py-4 gradient-primary text-white font-bold rounded-xl shadow-lg mt-4">Request
-                                        Assessment</a>
+                                    <a href="contact.html" class="btn btn-primary btn-full mt-4">Get
+                                        a Quote</a>
                                 </div>
                             </div>
                         </div>
@@ -299,14 +293,14 @@
                 <div>
                     <h4 class="text-lg font-bold mb-6 dark:text-white">Services</h4>
                     <ul class="space-y-4">
-                        <li><a href="services.html"
+                        <li><a href="office-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Office
                                 Cleaning</a></li>
                         <li><a href="industrial-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Industrial
                                 Cleaning</a>
                         </li>
-                        <li><a href="404.html"
+                        <li><a href="sanitization-services.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Sanitization</a>
                         </li>
                         <li><a href="coming-soon.html"
@@ -328,8 +322,9 @@
                 </div>
             </div>
             <div class="pt-8 border-t border-gray-100 dark:border-gray-800 text-center">
-                <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by Abhivorn
-                    Technologies.</p>
+                <p class="text-gray-500 dark:text-gray-400">&copy; 2026 NovaSite. All rights reserved by <a
+                        href="https://www.abhivorn.com/" target="_blank"
+                        class="hover:text-nova-blue transition-colors">Abhivorn Technologies</a>.</p>
             </div>
         </div>
     </footer>
