--- a/Commercial Janitorial Services/window-cleaning.html
+++ b/Commercial Janitorial Services/window-cleaning.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service Details - NovaSite</title>
+    <title>Window Cleaning - NovaSite</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -52,20 +52,20 @@
                 <a href="pricing.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Pricing</a>
                 <a href="contact.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Contact</a>
             </div>
-            <div class="flex items-center gap-4">
-                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
-                    <span>Login</span>
-                </a>
-                <button id="rtl-toggle" class="btn-icon font-bold text-xs">
-                    RTL
-                </button>
+            <div class="flex items-center space-x-4">
                 <button id="theme-toggle" class="btn-icon">
                     <i class="fa-solid fa-moon dark:hidden text-lg"></i>
                     <i class="fa-solid fa-sun hidden dark:block text-lg"></i>
                 </button>
+                <button id="rtl-toggle" class="btn-icon font-bold text-xs">
+                    RTL
+                </button>
                 <button id="mobile-menu-btn" class="lg:hidden btn-icon">
                     <i class="fa-solid fa-bars text-lg"></i>
                 </button>
+                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
+                    <span>Login</span>
+                </a>
             </div>
         </nav>
     </header>
@@ -103,44 +103,44 @@
                 <!-- Content Area -->
                 <div class="lg:w-2/3">
                     <div class="relative overflow-hidden rounded-[2rem] shadow-2xl mb-10 h-[400px]">
-                        <img src="assets/images/hero_cleaning.png" alt="Professional Office Cleaning"
+                        <img src="assets/images/window_cleaning.png" alt="Window Cleaning"
                             class="w-full h-full object-cover">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-bottom p-10">
                             <span
-                                class="bg-white/20 backdrop-blur-md text-white px-4 py-2 rounded-full text-sm font-semibold self-end">Cleaning
-                                & Maintenance</span>
+                                class="bg-white/20 backdrop-blur-md text-white px-4 py-2 rounded-full text-sm font-semibold self-end">Premium
+                                Services</span>
                         </div>
                     </div>
 
                     <h1 class="text-4xl lg:text-5xl font-bold font-heading mb-6 dark:text-white leading-tight">
-                        Professional <span class="text-transparent bg-clip-text gradient-vivid">Industrial
+                        Professional <span class="text-transparent bg-clip-text gradient-vivid">Window
                             Cleaning</span>
                     </h1>
                     <p class="text-gray-600 dark:text-gray-400 mb-8 leading-relaxed text-lg">
-                        Provide your employees with a clean, healthy, and productive work environment. Our commercial
-                        cleaning services are tailored to the unique needs of your office, ensuring every corner from
-                        the boardroom to the breakroom is spotless and sanitized.
+                        Elevate your business image with crystal clear windows. We provide expert window cleaning for
+                        high-rise buildings, commercial offices, and retail spaces using eco-friendly solutions and
+                        advanced reach systems.
                     </p>
 
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                         <div
                             class="p-6 bg-gray-50 dark:bg-gray-800 rounded-3xl border border-gray-100 dark:border-gray-700">
-                            <i class="fa-solid fa-microscope text-3xl text-primary-500 mb-4"></i>
-                            <h4 class="text-xl font-bold mb-2 dark:text-white">Inspection Reports</h4>
-                            <p class="text-gray-500 dark:text-gray-400">Regular quality checks with detailed digital
-                                reports available in your client portal.</p>
+                            <i class="fa-solid fa-sparkles text-3xl text-primary-500 mb-4"></i>
+                            <h4 class="text-xl font-bold mb-2 dark:text-white">Streak-Free Finish</h4>
+                            <p class="text-gray-500 dark:text-gray-400">Advanced pure water technology for a spotless,
+                                brilliant shine every time.</p>
                         </div>
                         <div
                             class="p-6 bg-gray-50 dark:bg-gray-800 rounded-3xl border border-gray-100 dark:border-gray-700">
-                            <i class="fa-solid fa-leaf text-3xl text-green-500 mb-4"></i>
-                            <h4 class="text-xl font-bold mb-2 dark:text-white">Eco-Friendly Supply</h4>
-                            <p class="text-gray-500 dark:text-gray-400">We use non-toxic, sustainable cleaning supplies
-                                to ensure safety and environmental health.</p>
+                            <i class="fa-solid fa-building text-3xl text-green-500 mb-4"></i>
+                            <h4 class="text-xl font-bold mb-2 dark:text-white">High-Rise Expertise</h4>
+                            <p class="text-gray-500 dark:text-gray-400">Certified professionals equipped for safe and
+                                efficient exterior cleaning at any height.</p>
                         </div>
                     </div>
 
-                    <h2 class="text-2xl font-bold font-heading mb-6 dark:text-white">Service Benefits</h2>
+                    <h2 class="text-2xl font-bold font-heading mb-6 dark:text-white">Our Methodology</h2>
                     <div class="space-y-4 mb-12">
                         <div class="flex items-start space-x-4">
                             <div
@@ -148,9 +148,9 @@
                                 <i class="fa-solid fa-check text-[10px]"></i>
                             </div>
                             <div>
-                                <h5 class="font-bold dark:text-white">Customized Cleaning Schedule</h5>
-                                <p class="text-gray-500 dark:text-gray-400 text-sm">Flexibility to clean after hours,
-                                    during hours, or on weekends.</p>
+                                <h5 class="font-bold dark:text-white">Interior & Exterior Cleaning</h5>
+                                <p class="text-gray-500 dark:text-gray-400 text-sm">Comprehensive cleaning of all glass
+                                    surfaces, including frames and sills.</p>
                             </div>
                         </div>
                         <div class="flex items-start space-x-4">
@@ -159,9 +159,9 @@
                                 <i class="fa-solid fa-check text-[10px]"></i>
                             </div>
                             <div>
-                                <h5 class="font-bold dark:text-white">Professionally Trained Staff</h5>
-                                <p class="text-gray-500 dark:text-gray-400 text-sm">Our staff undergo rigorous
-                                    background checks and continuous safety training.</p>
+                                <h5 class="font-bold dark:text-white">Water-Fed Pole Systems</h5>
+                                <p class="text-gray-500 dark:text-gray-400 text-sm">Eco-friendly cleaning reaching up to
+                                    60ft without ladders or heavy machinery.</p>
                             </div>
                         </div>
                         <div class="flex items-start space-x-4">
@@ -170,9 +170,9 @@
                                 <i class="fa-solid fa-check text-[10px]"></i>
                             </div>
                             <div>
-                                <h5 class="font-bold dark:text-white">Liability Insured</h5>
-                                <p class="text-gray-500 dark:text-gray-400 text-sm">Full bonding and insurance coverage
-                                    for your peace of mind.</p>
+                                <h5 class="font-bold dark:text-white">Seasonal Maintenance</h5>
+                                <p class="text-gray-500 dark:text-gray-400 text-sm">Customized schedules to keep your
+                                    facility looking its best year-round.</p>
                             </div>
                         </div>
                     </div>
@@ -182,20 +182,22 @@
                         <div
                             class="p-6 bg-white dark:bg-dark-card rounded-2xl border border-gray-100 dark:border-gray-800 shadow-sm">
                             <h4 class="font-bold dark:text-white flex justify-between items-center cursor-pointer">
-                                Do you provide the cleaning equipment?
+                                How often should windows be cleaned?
                                 <i class="fa-solid fa-chevron-down text-sm text-gray-400"></i>
                             </h4>
-                            <p class="mt-4 text-gray-500 dark:text-gray-400">Yes, we provide all industrial-grade
-                                equipment and supplies unless you choose otherwise.</p>
+                            <p class="mt-4 text-gray-500 dark:text-gray-400">For most commercial properties, we
+                                recommend monthly exterior cleaning and quarterly interior cleaning to maintain
+                                professional standards.</p>
                         </div>
                         <div
                             class="p-6 bg-white dark:bg-dark-card rounded-2xl border border-gray-100 dark:border-gray-800 shadow-sm">
                             <h4 class="font-bold dark:text-white flex justify-between items-center cursor-pointer">
-                                How do you handle building security?
+                                Do you clean windows during rain?
                                 <i class="fa-solid fa-chevron-down text-sm text-gray-400"></i>
                             </h4>
-                            <p class="mt-4 text-gray-500 dark:text-gray-400">We follow strict key-management protocols
-                                and background checks for all staff assigned to your site.</p>
+                            <p class="mt-4 text-gray-500 dark:text-gray-400">Light rain doesn't affect our cleaning
+                                quality. However, for safety reasons, we reschedule high-rise services during heavy
+                                storms or high winds.</p>
                         </div>
                     </div>
                 </div>
@@ -206,37 +208,21 @@
                         <!-- Quick Quote/Booking -->
                         <div
                             class="p-8 bg-white dark:bg-dark-card rounded-[2rem] shadow-2xl border border-gray-100 dark:border-gray-800">
-                            <h3 class="text-2xl font-bold font-heading mb-2 dark:text-white">Service Calculator</h3>
-                            <p class="text-gray-500 dark:text-gray-400 text-sm mb-6">Estimate your monthly cleaning
-                                cost.</p>
+                            <h3 class="text-2xl font-bold font-heading mb-2 dark:text-white">Book a Cleaning</h3>
+                            <p class="text-gray-500 dark:text-gray-400 text-sm mb-6">Get a personalized estimate for
+                                your facility's windows.</p>
 
                             <div class="space-y-4">
                                 <div>
                                     <label
-                                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Square
-                                        Footage (sq ft)</label>
-                                    <input type="number" value="1000"
+                                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Number
+                                        of Floors</label>
+                                    <input type="number" value="1"
                                         class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-gray-800 border-none outline-none dark:text-white focus:ring-2 focus:ring-primary-500">
-                                </div>
-                                <div>
-                                    <label
-                                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Cleaning
-                                        Frequency</label>
-                                    <select
-                                        class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-gray-800 border-none outline-none dark:text-white focus:ring-2 focus:ring-primary-500">
-                                        <option>Daily (Mon-Fri)</option>
-                                        <option>Weekly (1 Day)</option>
-                                        <option>Bi-Weekly</option>
-                                        <option>Custom</option>
-                                    </select>
                                 </div>
                                 <div class="pt-4 border-t border-gray-100 dark:border-gray-800">
-                                    <div class="flex items-center justify-between mb-2">
-                                        <span class="text-gray-500 dark:text-gray-400">Estimated Cost:</span>
-                                        <span class="text-2xl font-bold text-primary-500">$299/mo</span>
-                                    </div>
-                                    <a href="contact.html" class="btn btn-primary btn-full mt-4">Book
-                                        Free Inspection</a>
+                                    <a href="contact.html" class="btn btn-primary btn-full mt-4">Get
+                                        a Quote</a>
                                 </div>
                             </div>
                         </div>
@@ -244,14 +230,14 @@
                         <!-- Testimonals Small -->
                         <div class="p-8 bg-primary-600 rounded-[2rem] text-white shadow-xl relative overflow-hidden">
                             <i class="fa-solid fa-quote-right absolute top-6 right-6 text-4xl text-white/10"></i>
-                            <p class="italic mb-6 text-primary-50">"The quality inspection reports provided after every
-                                clean give us total transparency. Highly recommend!"</p>
+                            <p class="italic mb-6 text-primary-50">"The difference was night and day. Our office feels
+                                brighter and more welcoming thanks to their meticulous window service."</p>
                             <div class="flex items-center space-x-3">
-                                <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80"
-                                    alt="Sarah Johnson" class="w-10 h-10 rounded-full object-cover">
+                                <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80"
+                                    alt="Sarah Jenkins" class="w-10 h-10 rounded-full object-cover">
                                 <div>
-                                    <p class="font-bold text-sm">Sarah Johnson</p>
-                                    <p class="text-xs text-primary-100">Operations Manager, TechCorp</p>
+                                    <p class="font-bold text-sm">Sarah Jenkins</p>
+                                    <p class="text-xs text-primary-100">Operations Lead, TechHub</p>
                                 </div>
                             </div>
                         </div>
@@ -319,7 +305,7 @@
                         <li><a href="sanitization-services.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Sanitization</a>
                         </li>
-                        <li><a href="coming-soon.html"
+                        <li><a href="window-cleaning.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Window
                                 Cleaning</a></li>
                     </ul>
